--- a/TODO.txt
+++ b/TODO.txt
@@ -23,3 +23,4 @@ Animate message during sending (going from textView to tableView)
 Send photos & videos
 Add red (!) button on failed message send
 Fix resulting contentOffset when pasting multiple lines into textView #bug #messenger
+Testing
